[tool.poetry]
name = "robinl-github-io"
version = "0.1.0"
description = ""
authors = ["Robin Linacre <robin.linacre@digital.justice.gov.uk>"]
readme = "README.md"
packages = [{include = "robinl"}]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.25.2"
splink = "^3.9.7"
pyarrow = "^13.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
