[tool.poetry]
name = "match-weights-article"
version = "0.1.0"
description = ""
authors = ["Robin Linacre <robin.linacre@digital.justice.gov.uk>"]
readme = "README.md"
packages = [{include = "match_weights_article"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
